--- a/fvwm2.desktop
+++ b/fvwm2.desktop
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Name=Fvwm2
-Commnet=An improved version of the FVWM X-based window manager
-Commnet[de]=F(?) Virtual Window Manager
-Commnet[es]=Administrador de ventanas semejante al mwm
-Commnet[fr]=F(?) Virtual Window Manager
-Commnet[ja]=╡Чнихг FVWM - X мя╔╕╔ё╔С╔и╔╕╔ч╔м║╪╔╦╔Ц
-Commnet[tr]=YaygЩn bir pencere denetleyicisi
-Commnet[pt_BR]=Gerenciador de janelas semelhante ao mwm
-Commnet[ru]=Виртуальный оконный менеджер F(?)
+Comment=An improved version of the FVWM X-based window manager
+Comment[de]=F(?) Virtual Window Manager
+Comment[es]=Administrador de ventanas semejante al mwm
+Comment[fr]=F(?) Virtual Window Manager
+Comment[ja]=╡Чнихг FVWM - X мя╔╕╔ё╔С╔и╔╕╔ч╔м║╪╔╦╔Ц
+Comment[tr]=YaygЩn bir pencere denetleyicisi
+Comment[pt_BR]=Gerenciador de janelas semelhante ao mwm
+Comment[ru]=Виртуальный оконный менеджер F(?)
 Exec=fvwm2
 TryExec=fvwm2
 
