--- a/fvwm2.desktop
+++ b/fvwm2.desktop
@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Name=Fvwm2
 Comment=An improved version of the FVWM X-based window manager
 Comment[de]=F(?) Virtual Window Manager
