--- a/fvwm2.desktop
+++ b/fvwm2.desktop
@@ -7,6 +7,7 @@ Comment[es]=Administrador de ventanas semejante al mwm
 Comment[fr]=F(?) Virtual Window Manager
 Comment[ja]=改良版 FVWM - X 用ウィンドウマネージャ
 Comment[tr]=Yaygın bir pencere denetleyicisi
+Comment[pl]=Ulepszona wersja zarządcy okien FVWM
 Comment[pt_BR]=Gerenciador de janelas semelhante ao mwm
 Comment[ru]=Виртуальный оконный менеджер F(?)
 Exec=fvwm2
