- drop gnome wm-properties support (gnome won't grok this WM) - drop wmstyle support - install runwm script as bindir/fvwm2-session and modify   desktop file accordingly
Changed files:
    fvwm2-xsession.desktop -> 1.5
    fvwm2.spec -> 1.89

--- a/fvwm2-xsession.desktop
+++ b/fvwm2-xsession.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=XSession
-Exec=fvwm2
+Exec=fvwm2-session
 TryExec=fvwm2
 Name=FVWM2
 Comment=Improved version of the FVWM window manager
